Update readme for new versions.