@@ -9,6 +9,7 @@ docker run -it felixklauke/paperspigot:1.12.2
 
 # Tags and Versions
 The docker images are tagged for their minecraft versions. Therefor you can currently choose between this versions:
+- `felixklauke/paperspigot:1.14.2` 
 - `felixklauke/paperspigot:1.14.1` 
 - `felixklauke/paperspigot:1.13.2` 
 - `felixklauke/paperspigot:1.12.2`
@@ -16,12 +17,6 @@ The docker images are tagged for their minecraft versions. Therefor you can curr
 - `felixklauke/paperspigot:1.10.2`
 - `felixklauke/paperspigot:1.9.4`
 - `felixklauke/paperspigot:1.8.8`
-
-# Run arguments
-You can give three kind of environment parameters to configure how the server is actually run. These are
-- JAVA_ARGS (default: "-Xmx2G -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -server -Dcom.mojang.eula.agree=true")
-- SPIGOT_ARGS (default: "--bukkit-settings ${CONFIG_PATH}/bukkit.yml --plugins ${PLUGINS_PATH} --world-dir ${WORLDS_PATH} --spigot-settings ${CONFIG_PATH}/spigot.yml --commands-settings ${CONFIG_PATH}/commands.yml --config ${CONFIG_PATH}/server.properties")
-- PAPERSPIGOT_ARGS (default: "--paper-settings ${CONFIG_PATH}/paper.yml")
 
 # Volumes
 There are three volumes used for:
@@ -35,7 +30,7 @@ You can find the mount locations in the `docker-compose.yml`
 You can add this simple entry to your docker-compose.yml:
 ```
 
-version: '3'
+version: '3.7'
 
 services:
   minecraft:
